Add little progress to the index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="top"> <img src="Netflix.png" alt="" class="netfliximage"> </nav>
+    <nav class="top"> <img src="Netflix.png" alt="" class="netfliximage"> 
+        <div class="categories">
+         <div class="left">
+            <a href="">Home</a>
+            <a href="">TV Shows</a>
+            <a href="">New & Popular</a>
+            <a href=""> My List</a>
+        </div>   
+        <div class="right">
+            
+        </div>
+    </div></nav>
 </body>
 <script></script>
 </html>
