--- a/index.html
+++ b/index.html
@@ -30,15 +30,26 @@
     </div></nav>
 <div class="big-pictures">
     <div class="picture-slide">
-        <img src="frieren.webp" alt="" class="title-page">
-        <img src="https://occ-0-2342-58.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABQjxESzPBtiYUkTrwm1X7WZUPOVH1lrglizyGEelM6a5DlRZC0Q0dj3og2MOFX9m9D-xEy8FnW9aOB1Py1tqeMSHJN-AHC-fZ6Bv.webp?r=e24" alt="Image 1" class="frierenimage">
+        <img src="Screenshot 2023-11-14 110954.png" alt="Image 1" class="slideimage">
     </div>
     <div class="picture-slide">
-        <img src="https://occ-0-2342-58.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABQjxESzPBtiYUkTrwm1X7WZUPOVH1lrglizyGEelM6a5DlRZC0Q0dj3og2MOFX9m9D-xEy8FnW9aOB1Py1tqeMSHJN-AHC-fZ6Bv.webp?r=e24" alt="Image 1" class="frierenimage">
+        <img src="avatar.png" alt="Image 2" class="slideimage">
     </div>
     <div class="picture-slide">
-        <img src="https://occ-0-2342-58.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABQjxESzPBtiYUkTrwm1X7WZUPOVH1lrglizyGEelM6a5DlRZC0Q0dj3og2MOFX9m9D-xEy8FnW9aOB1Py1tqeMSHJN-AHC-fZ6Bv.webp?r=e24" alt="Image 1" class="frierenimage">
+        <img src="aot.png" alt="Image 3" class="slideimage">
     </div>
+</div>
+
+<div class="TVshows">
+    <h1>TV Shows</h1>
+    <div class="group">
+    <div class="idk"><a href="#">‎ </a></div>
+    <div class="attack"><a href="#">‎ </a></div>
+    <div class="haikyu"><a href="#">‎ </a></div>
+    <div class="jj2"><a href="#">‎ </a></div>
+    <div class="spy"><a href="#">‎ </a></div>
+    <div class="frie"><a href="#">‎ </a></div>
+</div>
 
 </div>
 </body>
@@ -58,7 +69,7 @@
         }
         showSlide(currentSlideIndex);
 
-        setInterval(nextSlide,1000);
+        setInterval(nextSlide, 3000);
     })
 </script>
 </html>
