Finished 1st Page

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="top"> <a href="#Home"><img src="Netflix.png" alt="" class="netfliximage"></a> 
+    <nav class="top" > <a href="#Home"><img src="Netflix.png" alt="" class="netfliximage"></a> 
         <div class="categories">
          <div class="left">
-            <a href="">Home</a>
-            <a href="">TV Shows</a>
-            <a href="">Movies</a>
-            <a href="">New & Popular</a>
-            <a href="">My List</a>
+            <a href="#">Home</a>
+            <a href="#">TV Shows</a>
+            <a href="#">Movies</a>
+            <a href="#">New & Popular</a>
+            <a href="#">My List</a>
         </div>   
         <div class="right">
             <div class="box">
@@ -39,7 +39,7 @@
         <img src="aot.png" alt="Image 3" class="slideimage">
     </div>
 </div>
-
+<div class="movieselection">
 <div class="TVshows">
     <h1>TV Shows</h1>
     <div class="group">
@@ -49,6 +49,20 @@
     <div class="jj2"><a href="#">‎ </a></div>
     <div class="spy"><a href="#">‎ </a></div>
     <div class="frie"><a href="#">‎ </a></div>
+</div>
+
+<div class="trending">
+    <h1>Trending Now</h1>
+    <div class="group">
+        <div class="BB"></div>
+        <div class="PEAKY"></div>
+        <div class="QUEEN"></div>
+        <div class="SHELDON"></div>
+        <div class="ST"></div>
+        <div class="SHAME"></div>
+    </div>
+</div>
+
 </div>
 
 </div>
