--- a/login.html
+++ b/login.html
@@ -29,7 +29,8 @@
                     </span>
 
             </div>
-            <button class="submit-btn" type="submit"><a href="https://julianomi.github.io/project_akhir_semester/index.html">Sign In</a></button>
+            <button class="submit-btn" type="submit"><a href="index.html">Sign In</a></button> 
+            <!-- BELOM GITHUB LINK -->
             <br>
             <div class="remem-help">
                 <label class="remember">
