Just Need To Change Google Fonts

--- a/login.html
+++ b/login.html
@@ -23,14 +23,14 @@
                     Email or Phone Number
                 </span>
                 <div class="inputBox">
-                    <input type="text" id="email" class="inputText" required>
+                    <input type="password" id="email" class="inputText" required>
                     <span class="floating-label">
                         Password
                     </span>
 
             </div>
             <button class="submit-btn" type="submit"><a href="index.html">Sign In</a></button> 
-            <!-- BELOM GITHUB LINK -->
+            <!-- BELOM GITHUB LINK DAN HARUS DICLICK DI "SIGN IN" untuk pindah p-->
             <br>
             <div class="remem-help">
                 <label class="remember">
