--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
     <div>
         <button class="languange-btn">English <img src="down-icon.png" alt=""></button>
         <button> <a href="login.html"  class="link">Sign In</a></button>
+        <!-- HARUS PENCET "SIGN IN" UNTUK KE PAGE LAIN -->
     </div>
 
     <div class="header-content">
