--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="top" > <a href="#Home"><img src="Netflix.png" alt="" class="netfliximage"></a> 
         <div class="categories">
          <div class="left">
-            <a href="#">Home</a>
+            <a href="home.html">Home</a>
             <a href="#">TV Shows</a>
             <a href="#">Movies</a>
             <a href="#">New & Popular</a>
@@ -29,13 +29,13 @@
 
             <ul id = "menu">
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#">Settings</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Profiles</a>
                 </li>
                 <li>
-                    <a href="#">Profile</a>
+                    <a href="home.html">Log Out</a>
                 </li>
             </ul>
 
