--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas PAS: Netflix</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="top" > <a href="#Home"><img src="Netflix.png" alt="" class="netfliximage"></a> 
         <div class="categories">
          <div class="left">
-            <a href="home.html">Home</a>
+            <a href="https://julianomi.github.io/project_akhir_semester/home.html">Home</a>
             <a href="#">TV Shows</a>
             <a href="#">Movies</a>
             <a href="#">New & Popular</a>
@@ -35,7 +38,7 @@
                     <a href="#">Profiles</a>
                 </li>
                 <li>
-                    <a href="home.html">Log Out</a>
+                    <a href="https://julianomi.github.io/project_akhir_semester/home.htmll">Log Out</a>
                 </li>
             </ul>
 
