--- a/login.html
+++ b/login.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,14 +26,15 @@
                     Email or Phone Number
                 </span>
                 <div class="inputBox">
-                    <input type="password" id="email" class="inputText" required>
+                    <input type="password" id="password" class="inputText" required>
                     <span class="floating-label">
                         Password
                     </span>
+                    <button type="button" id="togglePassword" class="showhide">Show</button>
 
             </div>
-            <button class="submit-btn" type="submit"><a href="index.html">Sign In</a></button> 
-            <!-- BELOM GITHUB LINK DAN HARUS DICLICK DI "SIGN IN" untuk pindah p-->
+            <button class="submit-btn" type="submit"><a href="https://julianomi.github.io/project_akhir_semester/index.html">Sign In</a></button> 
+            <!-- HARUS DICLICK DI TEXTNYA "SIGN IN" untuk pindah page-->
             <br>
             <div class="remem-help">
                 <label class="remember">
