--- a/home.html
+++ b/home.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style2.css"> 
 </head>
 <body>
@@ -13,7 +16,7 @@
     </div>
     <div>
         <button class="languange-btn">English <img src="down-icon.png" alt=""></button>
-        <button> <a href="login.html"  class="link">Sign In</a></button>
+        <button> <a href="https://julianomi.github.io/project_akhir_semester/login.html"  class="link">Sign In</a></button>
         <!-- HARUS PENCET "SIGN IN" UNTUK KE PAGE LAIN -->
     </div>
 
@@ -23,7 +26,7 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <form class="email-signup">
             <input type="email" placeholder="Email address" required>
-            <button type="submit">Get Started</button>
+            <button type="submit"><a href="https://julianomi.github.io/project_akhir_semester/login.html"></a>Get Started</button>
         </form>
     </div>
 </nav>
